# mari

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
mari/worker/: gallery_dl.py  ytdl.py
tests/: test_worker.py
